# django-log-api

./: .flake8  .isort.cfg  README.md  pyproject.toml  setup.py
demo/: settings.py  urls.py
demo/root/: settings.py  urls.py
log_api/: apps.py  views.py
src/log_api/: settings.py  views.py
